# NaraVault

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: extension-setup.md
extension/: SETUP.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
extension/native-host/: com.naravault.host.json  install-unix.sh  install-windows.ps1
src/: App.svelte  app.css  fonts.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  launcher.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  commands.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  model.rs  s3.rs  state.rs  totp.rs
src/components/: BrandMark.svelte  Button.svelte  ConfirmHost.svelte  CopyButton.svelte  Field.svelte  Icon.svelte  IconButton.svelte  Input.svelte  ItemGlyph.svelte  MasterPasswordGate.svelte  Modal.svelte  SecretRow.svelte  StrengthMeter.svelte  Textarea.svelte  ToastHost.svelte
src/lib/: api.ts  categories.ts  confirm.svelte.ts  icons.ts  import-bitwarden.ts  launcher.svelte.ts  toast.svelte.ts  tweaks.svelte.ts  types.ts  util.ts  vault.svelte.ts
src/screens/: ChangeMaster.svelte  DetailView.svelte  Generator.svelte  ItemForm.svelte  Launcher.svelte  Onboarding.svelte  Settings.svelte  Unlock.svelte  Vault.svelte
src/screens/detail/: TotpField.svelte
